Fourth commit - added and completed final fieldset - added some <div> elements for spacing in the form - styled all fieldsets according to instructions - fixed input types for email and phone number - beginning work on data validation finally

--- a/styles/main.css
+++ b/styles/main.css
@@ -120,7 +120,7 @@ main h3 {
 main legend {
 	color: gray;
 	font-weight: bold;
-	font-size: 90%;
+	font-size: 85%;
 }
 
 main ul#product-categories {
@@ -150,8 +150,8 @@ main form#order_form {
 	margin: auto;
 }
 
-main form#order_form fieldset legend {
-	font-size: 85%;
+main form#order_form fieldset {
+	margin-bottom: 15px;
 }
 
 main form#order_form fieldset ul {
@@ -162,10 +162,28 @@ main form#order_form fieldset input[type="radio"] {
 	margin-left: 10%
 }
 
+main form#order_form fieldset div#buttons {
+	padding-left: 29%;
+	font-size: 85%;
+}
+
+main form#order_form fieldset div#buttons input {
+	width: 10em;
+	margin-right: 6px;
+}
+
 main form#order_form fieldset ul li {
 	margin: 10px;
 	margin-right: 40%;
 	text-align: right;
+}
+
+main form#order_form fieldset ul li div#expiry{
+	padding-right: 9%;
+}
+
+main form#order_form fieldset ul li div#expiry label select{
+	margin-right: 6px;
 }
 
 main form#order_form fieldset ul li label {
@@ -182,6 +200,12 @@ main form#order_form fieldset ul li label select {
 	list-style-type: none;
 	clear: right;
 	width: 15em;
+}
+
+main form#order_form fieldset ul li label select[id="expiry_date"] {
+	list-style-type: none;
+	clear: right;
+	width: auto;
 }
 
 main form#order_form fieldset ul li label input[required] {
